<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:viewBindingIgnore="false"
    tools:context=".BookdetailsActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:scaleType="centerCrop"
        android:layout_height="150dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bookshelf" />

    <EditText
        android:id="@+id/BookName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/updatebooksbtn"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="18dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/updatebookname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <EditText
        android:id="@+id/writerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/updatebooksbtn"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="18dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/BookName"
        app:layout_constraintStart_toStartOf="@+id/BookName"
        app:layout_constraintTop_toBottomOf="@+id/BookName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/numofbook"
        app:layout_constraintTop_toBottomOf="@+id/numofbook" />

    <Spinner
        android:id="@+id/spinnerbooknum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/numofbook" />

    <Button
        android:id="@+id/increment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rippleeffectforupdatebtn"
        android:text="@string/incre"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerbooknum"
        app:layout_constraintEnd_toEndOf="@+id/Updatewritername"
        app:layout_constraintStart_toStartOf="@+id/Updatewritername"
        app:layout_constraintTop_toTopOf="@+id/spinnerbooknum" />

    <Button
        android:id="@+id/updatebookname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rippleeffectforupdatebtn"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="@+id/BookName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/BookName" />

    <Button
        android:id="@+id/Updatewritername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rippleeffectforupdatebtn"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="@+id/writerName"
        app:layout_constraintEnd_toEndOf="@+id/updatebookname"
        app:layout_constraintTop_toTopOf="@+id/writerName" />

    <TextView
        android:id="@+id/numofbook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/writerName"
        app:layout_constraintStart_toStartOf="@+id/writerName"
        app:layout_constraintTop_toBottomOf="@+id/writerName" />

    <TextView
        android:id="@+id/nointernet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nointernet"
        android:textColor="#69F0AE"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>